// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeDataView should be fetch children nodes 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "fields": Array [
      "version",
      "active",
      "createTime",
      "updateTime",
      "name",
      "nameSpell",
      "code",
      "corporationId",
      "order",
      "id",
    ],
    "id": "6Rk9l1WYNM0400:72092047",
    "refs": Object {
      "children": Object {
        "model": "organization.Department",
        "type": 1,
      },
      "parentId": Object {
        "model": "organization.Department",
        "type": 0,
      },
    },
    "type": "organization.Department",
  },
  "active": true,
  "children": Array [],
  "code": "",
  "corporationId": "6Rk9l1WYNM0400",
  "createTime": 1574211989469,
  "id": "6Rk9l1WYNM0400:72092047",
  "name": "线上支持组",
  "nameSpell": "XIANSHANGZHICHIZU",
  "order": 72092047,
  "parentId": "6Rk9l1WYNM0400:50128174",
  "updateTime": 1574211989469,
  "version": 1,
}
`;

exports[`TreeDataView should be fetch parent node 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "fields": Array [
      "version",
      "active",
      "createTime",
      "updateTime",
      "name",
      "nameSpell",
      "code",
      "corporationId",
      "order",
      "id",
    ],
    "id": "6Rk9l1WYNM0400:50128174",
    "refs": Object {
      "children": Object {
        "model": "organization.Department",
        "type": 1,
      },
      "parentId": Object {
        "model": "organization.Department",
        "type": 0,
      },
    },
    "type": "organization.Department",
  },
  "active": true,
  "children": Array [
    "6Rk9l1WYNM0400:72167029",
  ],
  "code": "",
  "corporationId": "6Rk9l1WYNM0400",
  "createTime": 1574211989469,
  "id": "6Rk9l1WYNM0400:50128174",
  "name": "测试支持大部3",
  "nameSpell": "CESHIZHICHIDABU3",
  "order": 2,
  "parentId": "6Rk9l1WYNM0400:49525176",
  "updateTime": 1574211989469,
  "version": 1,
}
`;

exports[`TreeDataView should be fetched children nodes 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "fields": Array [
      "version",
      "active",
      "createTime",
      "updateTime",
      "name",
      "nameSpell",
      "code",
      "corporationId",
      "order",
      "id",
    ],
    "id": "6Rk9l1WYNM0400:72092047",
    "refs": Object {
      "children": Object {
        "model": "organization.Department",
        "type": 1,
      },
      "parentId": Object {
        "model": "organization.Department",
        "type": 0,
      },
    },
    "type": "organization.Department",
  },
  "active": true,
  "children": Array [],
  "code": "",
  "corporationId": "6Rk9l1WYNM0400",
  "createTime": 1574211989469,
  "id": "6Rk9l1WYNM0400:72092047",
  "name": "线上支持组",
  "nameSpell": "XIANSHANGZHICHIZU",
  "order": 72092047,
  "parentId": "6Rk9l1WYNM0400:50128174",
  "updateTime": 1574211989469,
  "version": 1,
}
`;

exports[`TreeDataView should be fetched parent node 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "fields": Array [
      "version",
      "active",
      "createTime",
      "updateTime",
      "name",
      "nameSpell",
      "code",
      "corporationId",
      "order",
      "id",
    ],
    "id": "6Rk9l1WYNM0400:50128174",
    "refs": Object {
      "children": Object {
        "model": "organization.Department",
        "type": 1,
      },
      "parentId": Object {
        "model": "organization.Department",
        "type": 0,
      },
    },
    "type": "organization.Department",
  },
  "active": true,
  "children": Array [
    "6Rk9l1WYNM0400:72167029",
  ],
  "code": "",
  "corporationId": "6Rk9l1WYNM0400",
  "createTime": 1574211989469,
  "id": "6Rk9l1WYNM0400:50128174",
  "name": "测试支持大部3",
  "nameSpell": "CESHIZHICHIDABU3",
  "order": 2,
  "parentId": "6Rk9l1WYNM0400:49525176",
  "updateTime": 1574211989469,
  "version": 1,
}
`;
